spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lato', 'Helvetica', 'Verdana', sans-serif;
-  background: #2A312A;
+  background: #919191;
 }
 
 #container {
